# ai-self-workshop

./: .deepeval  .env.example  README.md  bedrock.py  main.py  notebook.ipynb  pyproject.toml  test_with_deepeval.py
resources/: calculator.txt  executor.txt  expression_generator.txt  formule.txt  formule_vecchie.txt  parser.txt
